--- a/frontend/src/blocks/page/page.css
+++ b/frontend/src/blocks/page/page.css
@@ -5,6 +5,7 @@
     padding-top: 45px;
     padding-bottom: 60px;
     background-color:  rgba(0, 0, 0, 1);
+    min-height: 100vh;
 }
 @media screen and (max-width: 590px){
     .page{
